[package]
name = "klyuch"
version = "0.1.0"
edition = "2021"
authors = ["KubikPixel <kubikpixel@dismail.de>"]
license = "Apache-2.0"
description = "Your trusted E2EE escrow service for your digital assets."
keywords = ["web", "service", "escrow", "e2ee", "assets", "encryption", "vault" ]
readme = "README.md"
homepage = "https://klyu.ch"
documentation = "https://doc.klyu.ch"
repository = "https://gitlab.com/kubikpixel/klyuch.git"

[dependencies]
actix-web = "4"
jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ] }
